# chain_editor

./: Cargo.toml
assets/slime_map/: grass.xcf  mesh.blend  mesh.blend1  mesh.glb  rock.xcf  rock_crease.xcf
src/: main.rs  slime.rs  ui.rs
src/slime/: map.rs
